# jjvs

./: .gitignore  .vscodeignore  LICENSE  README.md  biome.json  language-configuration.json  package.json  tsconfig.json
native/: Cargo.toml  package.json
native/src/: base_ignores.rs  blob.rs  changes.rs  colocation.rs  ignore.rs  lib.rs  logger.rs  probe.rs  workspace_loader.rs
src/: decorations.ts  diff.ts  extension.ts  logger.ts  native.ts  repository.ts  scm.ts  statusBar.ts
syntaxes/: jjdescription.tmLanguage.json
