[package]
name = "jjvs-native"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["napi6"] }
napi-derive = "3"
# jj-lib 在 crates.io 上随 jj CLI 发版，明确标注 experimental、无 lib 层稳定性承诺。
# 锁定到具体版本；升级时 native/src/ 与 TS 侧 NativeBinding 均需同步适配。
jj-lib = "=0.40.0"
# jj-lib 的公共 API 大量是 async fn，但其内部实现依靠 pollster 阻塞 executor
# （见 jj-lib/src/merged_tree.rs 等文件的 `use pollster::FutureExt as _`），
# 不依赖 I/O reactor。AsyncTask::compute 在 libuv 线程池同步运行，统一用
# pollster 把 jj-lib 的 async 拉平为阻塞调用即可，不引入 tokio runtime。
pollster = "0.4"
futures = "0.3"
# jj-lib 的 store.read_file 返回 tokio::io::AsyncRead；这里只需要 AsyncReadExt
# 扩展方法驱动 Cursor 读到 Vec<u8>，io-util 就够了，无需 rt / net。
tokio = { version = "1", features = ["io-util"] }
# 统一日志门面：native 侧所有打点（含 panic hook）走 log crate，桥接层把
# log::Record 转成 ThreadsafeFunction<NativeLogPayload> 回到 TS 侧 logger。
log = "0.4"
# base_ignores 构建期要读 git 全局配置（`core.excludesFile`）。colocated 仓库
# 直接用 jj-lib 的 GitBackend → gix::Repository → config_snapshot 就够，但非
# colocated 场景需要我们自己调 `gix::config::File::from_globals()`，因此把
# gix 从传递依赖提升为直接依赖。版本锁死 `=0.81.0`，与 jj-lib 0.40.0 传递
# 依赖同版本——升级 jj-lib 时须同步核对并 bump。default-features = false
# 避免把 gix 的 CLI 级 feature（comfort / extras 等）也拉进 cdylib。gix-config
# 是 gix 非 optional 依赖，不启用任何顶层 feature 也能直接用 `gix::config`。
gix = { version = "=0.81.0", default-features = false }

[build-dependencies]
# napi-build 没有发布 3.x 稳定版本（3.0.0-beta.0 已被 yank），官方 3.x 项目
# 模板仍使用 2.x 系列；搭配 napi/napi-derive 3.x 使用。
napi-build = "2.3"

[profile.release]
lto = true
